--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "streamlit-extras"
-version = "0.2.4"
+version = "0.2.5"
 license = "Apache 2.0"
 description = "A library to discover, try, install and share Streamlit extras"
 authors = ["Arnaud Miribel <arnaudmiribel@gmail.com>", "Zachary Blackwood <zachary@streamlit.io>"]
@@ -23,6 +23,7 @@ python = ">=3.8,<3.9.7 || >3.9.7,<4.0" # Apparently streamlit doesn't work with 
 streamlit = ">=1.0.0"
 st-annotated-text = ">=3.0.0"
 streamlit-embedcode = ">=0.1.2"
+streamlit-book = "0.7.5"
 streamlit-keyup = ">=0.1.9"
 protobuf = "!=3.20.2"
 streamlit-camera-input-live = ">=0.2.0"
@@ -30,11 +31,10 @@ streamlit-vertical-slider = ">=1.0.2"
 streamlit-toggle-switch = ">=1.0.2"
 streamlit-custom-toggle = "0.1.1"
 htbuilder = "0.6.1"
-streamlit-book = "0.7.5"
 streamlit-faker = ">=0.0.2"
 streamlit-card = ">=0.0.4"
 markdownlit = ">=0.0.5"
-
+streamlit-image-coordinates = "^0.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
@@ -77,4 +77,3 @@ follow_imports = "silent"
 ignore_missing_imports = true
 scripts_are_modules = true
 python_version = 3.9
-
